--- a/RedeSocial/templates/en/public/Base.HTML
+++ b/RedeSocial/templates/en/public/Base.HTML
@@ -64,13 +64,12 @@
 					
 					<hr style="margin: 8px 0px 8px 0px; border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
 					
-					<li id="li-ativos"><span class="badge" id="badge-ativos">{{qtd_d_ativos_desafiado}}</span><a href="ativos" class="form-notificacao">Ativos</a></li>
+					<li id="li-ativos"><span id="wrap-badge-ativos"><span class="badge" id="badge-ativos">{{qtd_d_ativos_desafiado}}</span><a href="ativos" class="form-notificacao">Ativos</a></span></li>
 					
 					
 					<hr style="margin: 8px 0px 8px 0px; border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
 					
-					<li><span class="badge">{{desafios_cumpridos}}</span><a href="cumpridos" class="form-notificacao">Cumpridos</a></li>
-				
+					<li id="li-cumpridos"><span id="wrap-badge-cumpridos"><span id="badge-cumpridos" class="badge">{{desafios_cumpridos}}</span><a href="cumpridos" class="form-notificacao">Cumpridos</a></span></li>
 					
 				</ul>
 			</div>
