--- a/RedeSocial/templates/en/public/Feeds_verMais.HTML
+++ b/RedeSocial/templates/en/public/Feeds_verMais.HTML
@@ -123,7 +123,7 @@
 	
 	
 	{% endif %}
-		<form name="form" action="buscaPerfilUsuario" method="post" style="margin-top: 2px;">
+		<form name="form" action="buscaPerfilUsuario/{{e.usuario.id}}" method="post" style="margin-top: 2px;">
 			{% csrf_token %} <input type="submit" value="{{e.usuario.nome}}"
 				class="meulink"> <input type="hidden" name="cUsuario"
 				value="{{e.usuario.id}}"> <font id="containerData">{{e.date|date:"D d M Y"}}</font> 
@@ -300,7 +300,7 @@
     </form>
     {% endif %}
 
-       <form name="form" action="buscaPerfilUsuario" method="post" style="margin-top: 2px;">
+       <form name="form" action="buscaPerfilUsuario/{{e.usuario.id}}" method="post" style="margin-top: 2px;">
             {% csrf_token %} <input type="submit" value="{{e.usuario.nome}}"
                 class="meulink"> <input type="hidden" name="cUsuario"
                 value="{{e.usuario.id}}"> 
