--- a/RedeSocial/templates/en/public/Rankings.html
+++ b/RedeSocial/templates/en/public/Rankings.html
@@ -40,7 +40,7 @@
 						</td>
 
 						<td style="font-size: 10pt;">
-							<form name="form" action="buscaPerfilUsuario" method="post">
+							<form name="form" action="buscaPerfilUsuario/{{e.id}}" method="post">
 								{% csrf_token %} <input type="submit" value="{{e.nome}}"
 									class="meulink"> <input type="hidden" name="cUsuario"
 									value="{{e.id}}">
