--- a/RedeSocial/templates/en/public/Timeline.HTML
+++ b/RedeSocial/templates/en/public/Timeline.HTML
@@ -12,24 +12,23 @@
 			<div id="ferramentaFeed">
 				<table>
 					<tr>
-					<td width="499">
-						<div class="inputFile btn btn-primary">
-							<span><img src="../static/imagens/iconCamera.png" width="28" /></span> <input type="file" name="arquivo" id="arquivo" onchange="PreviewImage();"/>
-						</div>
-					</td>
-
-
-					<td>
-						<input type="hidden" name="enviar" value="send" /> 
-						
-						<button id="btn-publicar" type="submit" name="Enviar" value="Publicar"
-						class="btn btn-primary disabled" disabled="disabled"><span class="glyphicon glyphicon-pencil"></span> Publicar
-						</button>
+						<td width="499">
+							<div class="inputFile btn btn-primary">
+								<span><img src="../static/imagens/iconCamera.png" width="28" /></span> <input type="file" name="arquivo" id="arquivo" onchange="PreviewImage();"/>
+							</div>
 						</td>
-						
+	
+						<td>
+							<input type="hidden" name="enviar" value="send" /> 
+							
+							<button id="btn-publicar" type="submit" name="Enviar" value="Publicar"
+							class="btn btn-primary disabled" disabled="disabled"><span class="glyphicon glyphicon-pencil"></span> Publicar
+							</button>
+						</td>
 					<!-- <td>
 						<img id="uploadPreview" style="width: 100px; height: 100px;" /> 
 					</td> -->
+					</tr>
 				</table>
 			</div>
 	
@@ -92,7 +91,7 @@
 	
 	{% endif %}
 		
-		<form name="form" action="buscaPerfilUsuario" method="post" style="margin-top: 2px;">
+		<form name="form" action="buscaPerfilUsuario/{{e.usuario.id}}" method="post" style="margin-top: 2px;">
 			{% csrf_token %} <input type="submit" value="{{e.usuario.nome}}"
 				class="meulink"> <input type="hidden" name="cUsuario"
 				value="{{e.usuario.id}}"> <font id="containerData">{{e.date|date:"D d M Y"}}</font> 
@@ -107,48 +106,47 @@
 		</div>
 		
 		<table cellpadding="0" cellspacing="0">
-				<tr>
-					<td style="background:  ; padding-left: 42px;">	
-					  {% if e.curtiu == True %}		
+			<tr>
+				<td style="background:  ; padding-left: 42px;">	
+					{% if e.curtiu == True %}		
 					  			   		
-				    	<a href="#" class="deslike">
-					       <button type="submit" value="excluir" class="curtir" title="Curtir" 
+				    <a href="#" class="deslike">
+						<button type="submit" value="excluir" class="curtir" title="Curtir" 
 							style="background: transparent; border: none; float: right;">
-								<img alt="curtir" src="../static/imagens/pingo.png" width="10" height="13" style="margin-top: 3px;">
-							</button>
-							<input type="hidden" id="hide" name="cID_post" value="{{e.id}}">   
-						</a>	
+							<img alt="curtir" src="../static/imagens/pingo.png" width="10" height="13" style="margin-top: 3px;">
+						</button>
+						<input type="hidden" id="hide" name="cID_post" value="{{e.id}}">   
+					</a>	
 					   
-				      {% elif e.curtiu == False %}
+				    {% elif e.curtiu == False %}
 					
-					  	<a href="#" class="like">
-					       <button type="submit" value="excluir" class="curtir" title="Curtir" 
+					<a href="#" class="like">
+						<button type="submit" value="excluir" class="curtir" title="Curtir" 
 							style="background: transparent; border: none; float: right;">
-								<img alt="curtir" src="../static/imagens/despingo.png" width="10" height="13" style="margin-top: 3px;">
-							</button>
-							<input type="hidden" id="hide" name="cID_post" value="{{e.id}}">   
-						</a>	
-						
-				   	</td>
-				   	
-		 			{% endif %}
-		 			
-					<td style="background:  ;">
-						<form action="usuarios_curtiram" id="u_curtiu" method="post"> {% csrf_token %} 
-							<input type="submit" id="id{{e.id}}" value="({{e.qtd_pingo}})" class="u-curtidas">
-							<input type="hidden" name="cID_post" value="{{e.id}}">
-						</form>
-					</td>
+							<img alt="curtir" src="../static/imagens/despingo.png" width="10" height="13" style="margin-top: 3px;">
+						</button>
+						<input type="hidden" id="hide" name="cID_post" value="{{e.id}}">   
+					</a>	
+				</td>
 
-					<td style="background: ;">
-						<form action="visualizarComentarios" method="post">
-							{% csrf_token %} <input type="hidden" name="cPost" value="{{e.id}}">
-							<input type="submit" name="comentarios"
-								value="Comentarios ({{e.qtd_coments}})" class="linkPostagem">
-						</form>
-					</td>
-				</tr>
-			</table>
+				{% endif %}
+				
+				<td style="background:  ;">
+					<form action="usuarios_curtiram" id="form-u-curtiu" method="post"> {% csrf_token %} 
+						<input type="submit" id="id{{e.id}}" value="({{e.qtd_pingo}})" class="u-curtidas">
+						<input type="hidden" id="hide-u-curtiu" name="cID_post" value="{{e.id}}">
+					</form>
+				</td>
+
+				<td style="background: ;">
+					<form action="visualizarComentarios" id="form-comentarios" method="post">
+					{% csrf_token %} 
+						<input type="hidden" id="hide-comentarios" name="cPost" value="{{e.id}}">
+						<input type="submit" name="comentarios" value="Comentários ({{e.qtd_coments}})" class="linkPostagem">
+					</form>
+				</td>
+			</tr>
+		</table>
 
 		<form action="postarComentarios" id="postar-comentario" method="post">
 			{% csrf_token %}
@@ -159,19 +157,15 @@
 				<table>
 					<tr>
 						<td style="background: ; width: 100%; height: 0px ">
-			
-				<textarea name="cComentario" class="formTextAreaTimeLine"
-					placeholder="Escreva um comentário..."></textarea>		
-
+							<textarea name="cComentario" class="formTextAreaTimeLine"
+								placeholder="Escreva um comentário..."></textarea>		
 						</td>
 						
 						<td style="margin-left: 10px; background: ; width: 50px;">
-						
 							<input type="hidden" id="comentario-id" name="cId" value="{{e.id}}" /> 
 							<button style="float: right;" class="btn btn-enviaComent">
 								<span class="glyphicon glyphicon-share-alt"></span>
 							</button>
-							
 						</td>
 					</tr>
 				</table>
@@ -182,42 +176,23 @@
 
 <!-- ############################ Fim - Postagem normal #################################### -->
 	{% elif e.desafio == True %}
+	
 <!-- ############################ Postagem desafio #################################### -->
 	
-	<div id="containerPostagemDesafio">
+  <div class="containerPostagemDesafio" id="{{e.id}}">
     {% if e.usuario == Usuario %}
-    <form id="idapagar{{ forloop.counter }}" action="apagar_postagem" method="post"> {% csrf_token %}
-        <input type="hidden" name = "id" value={{e.id}}>
+
+     <form id="id-apagar-desafio" action="apagar_postagem" method="post"> {% csrf_token %}
+        <input type="hidden" name = "id" id="id-apagar" value={{e.id}}>
         <button type="submit" value="excluir" class="remover" title="Remover" 
-        style="background: transparent; border: none; float: right;">
+          style="background: transparent; border: none; float: right;">
             <span class="glyphicon glyphicon-remove remove-feed" style="top: 4px;"></span>
         </button>
-        
-        <script type="text/javascript">
-                            
-                $("#idapagar{{ forloop.counter }}").submit(function() {
-    
-                    var url = "apagar_postagem"; // the script where you handle the form input.
-    
-                    $.ajax({
-                           type: "POST",
-                           url: url,
-                           data: $("#idapagar{{ forloop.counter }}").serialize(), // serializes the form's elements.
-                           success: function(data)
-                           {
-                               // show response from the php script.
-                               $("#containerFeedGeral").load("feed");
-                           }
-                         });
-    
-                    return false; // avoid to execute the actual submit of the form.
-                });                         
-                            
-    </script>
-    </form>
+    </form> 
+
     {% endif %}
 
-       <form name="form" action="buscaPerfilUsuario" method="post" style="margin-top: 2px;">
+       <form name="form" action="buscaPerfilUsuario/{{e.usuario.id}}" method="post" style="margin-top: 2px;">
             {% csrf_token %} <input type="submit" value="{{e.usuario.nome}}"
                 class="meulink"> <input type="hidden" name="cUsuario"
                 value="{{e.usuario.id}}"> 
@@ -229,143 +204,83 @@
                         <font class="meulink" style="margin-left: 55px;"><span class="form-class-nome">Desafio: </span>{{e.nome_desafio}}</font>
                     {% endif %}
                 </font>
-                 
         </form>
 
-        <div id="containerTexto">
-            {{e.text}} {% if e.foto.url != '/media/False' %}
+        <div id="containerTextoPostagem">
+          {{e.text}} {% if e.foto.url != '/media/False' %}
             <center>
-                <img src="{{e.foto.url}}" width="500" height="390" style="margin-top: 15px;" />
+              <img src="{{e.foto.url}}" width="500" height="390" style="margin-top: 15px;" />
             </center>
-            {% endif %}
+          {% endif %}
         </div>
 
         <table cellpadding="0" cellspacing="0">
-                <tr>
-                    <td style="background:  ; padding-left: 42px;">         
-                      {% if e.curtiu == True %}                         
-                        <form action="despingo" id="despingo" id="form_despingo" method="post">{% csrf_token %}
-
-                           <button type="submit" value="excluir" class="descurtir" title="Descurtir" 
-                            style="background: transparent; border: none; float: right;">
-                                <img alt="descurtir" src="../static/imagens/pingo.png" width="10" height="13" style="margin-top: 3px;">
-                            </button> 
-                            
-                            <input type="hidden" name="cID_post" value="{{e.id}}">
-                            
-                            <script type="text/javascript">
-                                                
-                                    $("#form_despingo").submit(function() {
-                        
-                                        var url = "despingo"; // the script where you handle the form input.
-                        
-                                        $.ajax({
-                                               type: "POST",
-                                               url: url,
-                                               data: $("#form_despingo").serialize(), // serializes the form's elements.
-                                               success: function(data)
-                                               {
-                                                   // show response from the php script.
-                                                   $("#containerFeedGeral").load("feed");
-                                               }
-                                             });
-                        
-                                        return false; // avoid to execute the actual submit of the form.
-                                    });                         
-                                                
-                        </script>
+          <tr>
+            <td style="background:  ; padding-left: 42px;"> 
+              {% if e.curtiu == True %}   
                           
-                        </form>
-                       
-                      {% elif e.curtiu == False %}
-                        
-                        <form action="pingo" id= "pingo" id="form_pingo" method="post">{% csrf_token %} 
-                        
-                           <button type="submit" value="excluir" class="curtir" title="Curtir" 
-                            style="background: transparent; border: none; float: right;">
-                                <img alt="curtir" src="../static/imagens/despingo.png" width="10" height="13" style="margin-top: 3px;">
-                            </button>  
-                            
-                            <input type="hidden" name="cID_post" value="{{e.id}}">  
-                            
-                            <script type="text/javascript">
-                                                
-                                    $("#form_pingo").submit(function() {
-                        
-                                        var url = "pingo"; // the script where you handle the form input.
-                        
-                                        $.ajax({
-                                               type: "POST",
-                                               url: url,
-                                               data: $("#form_pingo").serialize(), // serializes the form's elements.
-                                               success: function(data)
-                                               {
-                                                   // show response from the php script.
-                                                   $("#containerFeedGeral").load("feed");
-                                               }
-                                             });
-                        
-                                        return false; // avoid to execute the actual submit of the form.
-                                    });                         
-                                                
-                        </script>
-                        
-                        </form>
-                        
-                    
-                      {% endif %}
-                    </td>
-                    
-                    <td style="background:  ;">
-                        <form action="usuarios_curtiram" id="u_curtiu" method="post"> {% csrf_token %} 
-                            <input type="submit" value="({{e.qtd_pingo}})"  class="linkPostagem">
-                            <input type="hidden" name="cID_post" value="{{e.id}}">
-                        </form>
-                    </td>
-
-        
-                <td style="background: ;">
-                    <form action="visualizarComentarios" method="post">
-                        {% csrf_token %} <input type="hidden" name="cPost" value="{{e.id}}">
-                        <input type="submit" name="comentarios"
-                            value="Comentarios ({{e.qtd_coments}})" class="linkPostagem">
-                    </form>
-                </td>
-            </tr>
-        </table>
-
-        <form action="postarComentarios" method="post">
-            {% csrf_token %}
-            <hr
-                style="margin: 5px 15px 0px 15px; border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
-
-            <div id="enviarPost">
-                <table>
-                    <tr>
-                        <td style="background: ; width: 100%; height: 0px ">
-            
-                <textarea name="cComentario" class="formTextAreaTimeLine"
-                    placeholder="Escreva um comentário..."></textarea>      
-
-                        </td>
-                        
-                        <td style="margin-left: 10px; background: ; width: 50px;">
-                <input type="hidden" name="cId" value="{{e.id}}" /> 
-                    <button style="float: right;" class="btn btn-enviaComent">
-                        <span class="glyphicon glyphicon-share-alt"></span>
+                <a href="#" class="deslike-desafio">
+                    <button type="submit" value="excluir" class="curtir" title="Curtir" 
+                      style="background: transparent; border: none; float: right;">
+                      <img alt="curtir" src="../static/imagens/pingo.png" width="10" height="13" style="margin-top: 3px;">
                     </button>
-                    
-                        </td>
-                    </tr>
-                </table>
-            </div>
+                    <input type="hidden" id="hide" name="cID_post" value="{{e.id}}">   
+                </a>  
+               
+                {% elif e.curtiu == False %}
+            
+                <a href="#" class="like-desafio">
+                   <button type="submit" value="excluir" class="curtir" title="Curtir" 
+                      style="background: transparent; border: none; float: right;">
+                      <img alt="curtir" src="../static/imagens/despingo.png" width="10" height="13" style="margin-top: 3px;">
+                    </button>
+                    <input type="hidden" id="hide" name="cID_post" value="{{e.id}}">   
+                </a>  
+            </td>
+              
+            {% endif %}
+            
+            <td style="background:  ;">
+				<form action="usuarios_curtiram" id="form-u-curtiu-desafio" method="post"> {% csrf_token %} 
+					<input type="submit" id="id{{e.id}}" value="({{e.qtd_pingo}})" class="u-curtidas">
+					<input type="hidden" id="hide-u-curtiu" name="cID_post" value="{{e.id}}">
+				</form>
+			</td>
+
+			<td style="background: ;">
+				<form action="visualizarComentarios" id="form-comentarios-desafio" method="post">
+					{% csrf_token %} 
+					<input type="hidden" id="hide-comentarios" name="cPost" value="{{e.id}}">
+					<input type="submit" name="comentarios" value="Comentários ({{e.qtd_coments}})" class="linkPostagem">
+				</form>
+			</td>
+          </tr>
+      </table>
+
+        <form action="postarComentarios" id="postar-comentario-desafio" method="post">
+          {% csrf_token %}
+          <hr style="margin: 5px 15px 0px 15px; border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
+
+          <div id="enviarPost">
+            <table>
+              <tr>
+                <td style="background: ; width: 100%; height: 0px ">
+                  <textarea name="cComentario" class="formTextAreaTimeLine"
+                    placeholder="Escreva um comentário..."></textarea>    
+                </td>
+                
+                <td style="margin-left: 10px; background: ; width: 50px;">
+                  <input type="hidden" id="comentario-id" name="cId" value="{{e.id}}" /> 
+                  <button style="float: right;" class="btn btn-enviaComent">
+                    <span class="glyphicon glyphicon-share-alt"></span>
+                  </button>
+                </td>
+              </tr>
+            </table>
+          </div>
         </form>
-
-        
-
     </div>
-    
-    
+<!-- ############################ Fim - Postagem desafio #################################### -->
 
     {% endif %} 
     
@@ -382,16 +297,8 @@
 			    
     
     {% endfor %}
-    
-   <!--  <span class="msgLoad" style="display: none;">Carregando..</span>
-    
-    <hr>
-    
-    <a href="#" class="carregar-mais">Ver mais</a>
-    --> 
-    
 	
-<!-- ############################ Fim - Postagem desafio #################################### -->
+
 
 {% endblock %}
 </div>
